# Nova-Engine

./: .gitignore  CMakeLists.txt  README.md  TEST.cpp  main.cpp
Assets/Object/Sword/: Blade.jpg~  Sword.fbx  Sword.mtl
Assets/Shaders/: fragment_shader.fs  geometry_shader.gs  mask.fs  mask.vs  postProces.fs  postProces.vs  vertex_shader.vs
Engine/: main.cpp
Engine/include/: EngineCore.hpp  EngineWindowGLFW.hpp  GState.h  GState.hpp
Engine/include/Rendering/: Camera.h  Camera.hpp  FBO.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  Renderer.h  Renderer.hpp  Shader.hpp  Texture.h  Texture.hpp  VAO.h  VAO.hpp  VBO.hpp
Engine/include/UI/: ImGuiRender.h  ImGuiRender.hpp  UIManager.h  UIManager.hpp  WindowInput.h  WindowInput.hpp
Engine/include/UI/Object/: ContentBrowser.h  ContentBrowser.hpp  DetailsPanel.h  DetailsPanel.hpp  Hierarchy.hpp  Outliner.h  Outliner.hpp  TitleBar.hpp  ViewPort.h  ViewPort.hpp  WindowObjects.h  WindowObjects.hpp
Engine/src/: AppWindow.cpp  AppWindow.hpp  EngineCore.cpp  EngineWindowGLFW.cpp  GState.cpp  ToolsUI.cpp  ToolsUI.hpp
Engine/src/Rendering/: EBO.cpp  EBO.hpp  FBO.cpp  FBO.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  camera.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
Engine/src/Scene/: Component.cpp  Component.hpp  Components.hpp  Scene.cpp  Scene.hpp
Engine/src/Scene/Components/: Camera.cpp  Camera.hpp  Model.cpp  Model.hpp
Engine/src/UI/: EditorWindowState.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  UIManager.cpp  UIManager.hpp  imGuiRender.cpp  windowInput.cpp
Engine/src/UI/Object/: Hierarchy.cpp  TitleBar.cpp  contentBrowser.cpp  detailsPanel.cpp  outliner.cpp  viewPort.cpp
Engine/src/UI/Windows/: BaseWindow.cpp  BaseWindow.hpp  ContentBrowser.cpp  ContentBrowser.hpp  DetailsPanel.cpp  DetailsPanel.hpp  Hierarchy.cpp  Hierarchy.hpp  TitleBar.cpp  TitleBar.hpp  ViewPort.cpp  ViewPort.hpp
